--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -11,10 +11,10 @@ services:
 
     image: mariadb
     # build: requirements/mariadb
-    expose:
-      - "3306"
+    ports:
+      - "3306:3306"
     # volumes:
-    #   - mariadb
+    #   - database:
 
 
   wordpress:
@@ -28,10 +28,10 @@ services:
 
     image: wordpress
     # build: requirements/wordpress
-    expose:
-      - "9000"
-    # volumes:
-    #   - wordpress
+    ports:
+      - "9000:9000"
+    volumes:
+      - html:/var/www/html/
 
 
   nginx:
@@ -45,10 +45,11 @@ services:
 
     image: nginx
     # build: requirements/nginx
-    expose:
-      - "443"
-    # volumes:
-    #   - nginx:ro # ro for read only?
+    ports:
+      - "8080:80"
+      - "8443:443"
+    volumes:
+      - html:/usr/share/nginx/html
 
 
 
@@ -59,9 +60,5 @@ networks:
 
 
 volumes:
-  mariadb:
-    # idk
-  wordpress:
-    # idk
-  nginx:
-    # idk
+  database:
+  html:
