Update nginx Dockerfile to use debian:oldstable and install nginx

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,16 +1,21 @@
-FROM	nginx:latest
+FROM	debian:oldstable
 
 EXPOSE	443
-EXPOSE	80
+
+# Install nginx
+RUN 	apt update -y &&				\
+		apt install -y nginx
 
 # Copy the config file
-COPY	tools/default.conf				\
+COPY 	tools/default.conf				\
 		/etc/nginx/conf.d/
 
 # Create the directory for the html files
-RUN		mkdir -p	/data/www &&		\
-		chown -R	root:root /data/www			
+RUN 	mkdir -p /data/www &&			\
+		chown -R root:root /data/www
 
 # # Copy the index.html file to the default nginx path
-COPY	index.html				\
+COPY 	index.html						\
 		/data/www/
+
+CMD 	[ "nginx", "-g", "daemon off;" ]
