--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,8 +3,9 @@ FROM	debian:oldstable
 EXPOSE	443
 
 # Install nginx
-RUN 	apt update -y &&				\
-		apt install -y nginx
+RUN 	apt update -y &&			\
+		apt install -y nginx &&		\
+		apt install -y openssl
 
 # Copy the config file
 COPY 	tools/default.conf				\
@@ -17,6 +18,16 @@ RUN 	mkdir -p /data/www &&			\
 # # Copy the index.html file to the default nginx path
 COPY 	index.html						\
 		/data/www/
+
+# Generate the SSL certificate
+RUN 	openssl req												\
+			-x509												\
+			-nodes												\
+			-days		365										\
+			-newkey		rsa:2048								\
+			-subj		"/CN=inception"							\
+			-keyout		"/etc/ssl/private/nginx-selfsigned.key"	\
+			-out		"/etc/ssl/certs/nginx-selfsigned.crt"
 
 # Make nginx run in the foreground to keep the container running
 CMD 	[ "nginx", "-g", "daemon off;" ]
