--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,9 +1,18 @@
 server
 {
-	listen	443;
+	server_name				opelser.42.fr www.opelser.42.fr;
+	listen					443			ssl;
+	listen					[::]:443	ssl;
+
+	# SSL
+	ssl						on;
+	ssl_protocols			TLSv1.2 TLSv1.3;
+	ssl_certificate_key		/etc/ssl/private/nginx-selfsigned.key;
+	ssl_certificate			/etc/ssl/certs/nginx-selfsigned.crt;
 
 	location /
 	{
-		root /data/www;
+		root	/data/www;
+		index	index.html;
 	}
 }
