--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -10,9 +10,15 @@ server
 	ssl_certificate_key		/etc/ssl/private/nginx-selfsigned.key;
 	ssl_certificate			/etc/ssl/certs/nginx-selfsigned.crt;
 
-	location /
-	{
-		root	/data/www;
-		index	index.html;
-	}
+	# File handling
+	root					/var/www/html;
+	index					index.html index.php;
+
+	# location ~ \.php$
+	# {
+	# 	include				fastcgi_params;
+	# 	fastcgi_pass		unix:/run/php/php7.3-fpm.sock;
+	# 	fastcgi_index		index.php;
+	# 	fastcgi_param		SCRIPT_FILENAME	$document_root$fastcgi_script_name;
+	# }
 }
