Update nginx configuration to rote PHP handling to wordpress php-fpm

--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -14,11 +14,10 @@ server
 	root					/var/www/html;
 	index					index.html index.php;
 
-	# location ~ \.php$
-	# {
-	# 	include				fastcgi_params;
-	# 	fastcgi_pass		unix:/run/php/php7.3-fpm.sock;
-	# 	fastcgi_index		index.php;
-	# 	fastcgi_param		SCRIPT_FILENAME	$document_root$fastcgi_script_name;
-	# }
+	location ~ \.php$
+	{
+		# include				fastcgi_params;
+		# fastcgi_pass		wordpress:9000;
+		# fastcgi_param		SCRIPT_FILENAME	$document_root$fastcgi_script_name;
+	}
 }
