Working mariadb dockerfile and config, not sure whether using mysqld instead of mariadb is correct

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,4 @@
-MARIADB_ROOT_PASSWORD=rootpass
-MARIADB_USER=user1
-MARIADB_PASSWORD=pass
-MARIADB_DATABASE=wordpress
+DB_ROOT_PASSWORD=rootpass
+DB_USER=user1
+DB_PASSWORD=pass
+DB_NAME=wordpress
