--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -15,25 +15,25 @@ services:
       - database:/var/lib/mysql
 
 
-  wordpress:
-    container_name: wordpress
-    depends_on:
-      - mariadb
-    env_file: .env
-    environment:
-      - WORDPRESS_DB_HOST=mariadb:3306
-      - WORDPRESS_DB_NAME=$MARIADB_DATABASE
-      - WORDPRESS_DB_USER=$MARIADB_USER
-      - WORDPRESS_DB_PASSWORD=$MARIADB_PASSWORD
+  # wordpress:
+  #   container_name: wordpress
+  #   depends_on:
+  #     - mariadb
+  #   env_file: .env
+  #   environment:
+  #     - WORDPRESS_DB_HOST=mariadb:3306
+  #     - WORDPRESS_DB_NAME=$DB_NAME
+  #     - WORDPRESS_DB_USER=$DB_USER
+  #     - WORDPRESS_DB_PASSWORD=$DB_PASSWORD
 
-    build: requirements/wordpress
-    restart: always
-    networks:
-      - default
-    # volumes:
-    #   - html:/var/www/html
-    ports:
-      - "9000:80"
+  #   build: requirements/wordpress
+  #   restart: always
+  #   networks:
+  #     - default
+  #   # volumes:
+  #   #   - html:/var/www/html
+  #   ports:
+  #     - "9000:80"
 
 
   # nginx:
