MariaDB container refactor, SQL command not yet working

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,4 @@
-DB_ROOT_PASSWORD=rootpass
-DB_USER=user1
-DB_PASSWORD=pass
 DB_NAME=wordpress
+DB_USERNAME=wp-user
+DB_PASSWORD=wp-12345
+DB_ROOT_PASSWORD=kaastost1
