add wordpress files, weird error

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,11 @@
+DB_HOST=mariadb:3306
 DB_NAME=wordpress
-DB_USERNAME=wp-user
-DB_PASSWORD=wp-12345
-DB_ROOT_PASSWORD=kaastost1
+DB_USER=wp-user
+DB_PASS=wp-12345
+
+WP_TITLE='Inception'
+WP_URL=localhost:9000
+WP_HTTPS_URL=https://localhost:9000
+WP_ADMIN_USER=admin
+WP_ADMIN_PASS=admin
+WP_ADMIN_MAIL=admin@admin.com
