--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -24,25 +24,23 @@ services:
     restart: always
     networks:
       - default
-    # volumes:
-    #   - html:/var/www/html
+    volumes:
+      - html:/var/www/html
+
+
+  nginx:
+    container_name: nginx
+    depends_on:
+      - wordpress
+
+    build: requirements/nginx
+    restart: always
+    networks:
+      - default
     ports:
-      - "9000:80"
-
-
-  # nginx:
-  #   container_name: nginx
-  #   # depends_on:
-  #     # - wordpress
-
-  #   build: requirements/nginx
-  #   restart: always
-  #   networks:
-  #     - default
-  #   ports:
-  #     - "8443:443"
-  #   volumes:
-  #     - html:/var/www/html
+      - "8443:443"
+    volumes:
+      - html:/var/www/html
 
 
 
@@ -59,8 +57,8 @@ volumes:
       device: /home/opelser/Desktop/inception/database
 
 
-  # html:
-  #   driver_opts:
-  #     type: none
-  #     o: bind
-  #     device: /home/opelser/Desktop/inception/html
+  html:
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/opelser/Desktop/inception/html
