--- a/srcs/compose.yml
+++ b/srcs/compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - database:/var/lib/mysql
 
+
   wordpress:
     container_name: wordpress
     depends_on:
@@ -46,6 +47,7 @@ services:
 
 networks:
   default:
+    driver: bridge
 
 
 
