--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,6 +1,6 @@
 server
 {
-	server_name				opelser.42.fr www.opelser.42.fr;
+	server_name				opelser.42.fr www.opelser.42.fr localhost;
 	listen					443			ssl;
 	listen					[::]:443	ssl;
 
@@ -12,11 +12,20 @@ server
 	# File handling
 	root					/var/www/html;
 	index					index.html index.php;
+	try_files				$uri $uri/ /index.php?$args;
 
+	# PHP script handling
 	location ~ \.php$
 	{
-		# include				fastcgi_params;
-		# fastcgi_pass		wordpress:9000;
-		# fastcgi_param		SCRIPT_FILENAME	$document_root$fastcgi_script_name;
+		include				fastcgi_params;
+		fastcgi_pass		wordpress:9000;
+		fastcgi_index		index.php;
+		fastcgi_param		SCRIPT_FILENAME	$document_root$fastcgi_script_name;
+	}
+
+	# Security
+	location ~ /\.ht
+	{
+		deny				all;
 	}
 }
