--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -14,11 +14,13 @@ RUN 	apt install -y					\
 # Install WordPress Command Line Interface
 RUN 	wget "https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar"
 
+# Copy the php-fpm configuration file
+COPY 	tools/www.conf /etc/php/7.4/fpm/pool.d/www.conf
+
 # Make the file executable and move it to the bin directory to use it globally
 RUN 	chmod +x wp-cli.phar
 RUN 	mv		wp-cli.phar				\
 				/usr/local/bin/wp
-# RUN 	wp cli update
 
 # Make run dir
 RUN 	mkdir -p /run/php
