chore: Update WP_HTTPS_URL in .env file

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,8 +4,7 @@ DB_USER=wp-user
 DB_PASS=wp-12345
 
 WP_TITLE='Inception'
-WP_URL=localhost:9000
-WP_HTTPS_URL=https://localhost:9000
+WP_HTTPS_URL=https://localhost
 WP_ADMIN_USER=admin
 WP_ADMIN_PASS=admin
 WP_ADMIN_MAIL=admin@admin.com
