--- a/srcs/.env
+++ b/srcs/.env
@@ -4,7 +4,7 @@ DB_USER=wp-user
 DB_PASS=wp-12345
 
 WP_TITLE='Inception'
-WP_HTTPS_URL=https://localhost
+WP_HTTPS_URL=https://localhost:8443
 WP_ADMIN_USER=admin
 WP_ADMIN_PASS=admin
 WP_ADMIN_MAIL=admin@admin.com
