chore: Add user creation and theme activation in wp-install.sh

--- a/srcs/.env
+++ b/srcs/.env
@@ -5,6 +5,11 @@ DB_PASS=wp-12345
 
 WP_TITLE='Inception'
 WP_HTTPS_URL=https://localhost:8443
+
 WP_ADMIN_USER=admin
 WP_ADMIN_PASS=admin
 WP_ADMIN_MAIL=admin@admin.com
+
+WP_USER=user
+WP_MAIL=user@user.com
+WP_PASS=password
