--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,6 +1,6 @@
 server
 {
-	server_name				opelser.42.fr www.opelser.42.fr localhost;
+	server_name				opelser.42.fr www.opelser.42.fr;
 	listen					443			ssl;
 	listen					[::]:443	ssl;
 
