--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -4,9 +4,9 @@ DB_USER=wp-user
 DB_PASS=wp-12345
 
 WP_TITLE='Inception'
-WP_HTTPS_URL=https://localhost:8443
+WP_HTTPS_URL=https://opelser.42.fr
 
-WP_ADMIN_USER=admin
+WP_ADMIN_USER=superuser
 WP_ADMIN_PASS=admin
 WP_ADMIN_MAIL=admin@admin.com
 
